tests/macros/tests/ui/err/has-async-root-and-sync.stderr
error: `async_root` can only be applied on async function
 --> tests/ui/err/has-async-root-and-sync.rs:3:1
  |
3 | #[trace(async_root)]
  | ^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `trace` (in Nightly builds, run with -Z macro-backtrace for more info)
