tests/macros/tests/ui/err/has-async-root-and-sync.rs
use fastrace::trace;

#[trace(async_root)]
fn f() {}

fn main() {}
